--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo build --verbose
+      - run: cargo build --verbose --release
       - uses: actions/upload-artifact@v4
         with:
           name: linux-x64
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo build --verbose
+      - run: cargo build --verbose --release
       - uses: actions/upload-artifact@v4
         with:
           name: win-x64
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo build --verbose
+      - run: cargo build --verbose --release
       - uses: actions/upload-artifact@v4
         with:
           name: mac-arm64
