--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,13 @@ jobs:
           name: win-x64
           path: target/release/vibe-summarizer-rs.exe
 
-  build-mac-arm64:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: cargo build --verbose --release
-      - uses: actions/upload-artifact@v4
-        with:
-          name: mac-arm64
-          path: target/release/vibe-summarizer-rs
+  # build-mac-arm64:
+  #  runs-on: macos-latest
+  #  steps:
+  #    - uses: actions/checkout@v4
+  #    - uses: actions-rust-lang/setup-rust-toolchain@v1
+  #    - run: cargo build --verbose --release
+  #    - uses: actions/upload-artifact@v4
+  #      with:
+  #        name: mac-arm64
+  #        path: target/release/vibe-summarizer-rs
